fix wrap on home

--- a/client/app/components/home/home.scss
+++ b/client/app/components/home/home.scss
@@ -55,7 +55,7 @@
         background-color: #0061a1;
       }
       &:nth-child(1) a {
-        padding: 0 70px;
+        padding: 0 50px;
         text-align: center;
         display: block;
         &:after {
